@@ -58,7 +58,6 @@ include_once "include/page_header.php";
 
 	check_fields($fields);
 
-	$available_hosts = get_accessible_hosts_by_user($USER_DETAILS,PERM_READ_ONLY, PERM_RES_IDS_ARRAY);
 // ACTION /////////////////////////////////////////////////////////////////////////////
 	if(isset($_REQUEST['favobj'])){
 		$_REQUEST['pmasterid'] = get_request('pmasterid','mainpage');
@@ -286,6 +285,21 @@ include_once "include/page_header.php";
 			)*/
 	);
 
+// Status of ZBX
+	if(USER_TYPE_SUPER_ADMIN == $USER_DETAILS['type']){
+		$refresh_menu = new CDiv(SPACE,'iconmenu');
+		$refresh_menu->addAction('onclick','javascript: create_page_menu(event,"hat_stszbx");');
+		$refresh_menu->setAttribute('title',S_MENU);
+	
+		$zbx_stat = new CWidget('hat_stszbx',
+							new CSpan(S_LOADING_P,'textcolorstyles'),//make_status_of_zbx()
+							get_profile('web.dashboard.hats.hat_stszbx.state',1)
+							);
+		$zbx_stat->addHeader(S_STATUS_OF_ZABBIX,array($refresh_menu));
+		$right_tab->addRow($zbx_stat);
+	}
+//----------------
+
 // System status
 	$refresh_menu = new CDiv(SPACE,'iconmenu');
 	$refresh_menu->addAction('onclick','javascript: create_page_menu(event,"hat_syssum");');
@@ -297,19 +311,6 @@ include_once "include/page_header.php";
 						);
 	$sys_stat->addHeader(S_SYSTEM_STATUS,array($refresh_menu));
 	$right_tab->addRow($sys_stat);
-//----------------
-
-// Status of ZBX
-	$refresh_menu = new CDiv(SPACE,'iconmenu');
-	$refresh_menu->addAction('onclick','javascript: create_page_menu(event,"hat_stszbx");');
-	$refresh_menu->setAttribute('title',S_MENU);
-
-	$zbx_stat = new CWidget('hat_stszbx',
-						new CSpan(S_LOADING_P,'textcolorstyles'),//make_status_of_zbx()
-						get_profile('web.dashboard.hats.hat_stszbx.state',1)
-						);
-	$zbx_stat->addHeader(S_STATUS_OF_ZABBIX,array($refresh_menu));
-	$right_tab->addRow($zbx_stat);
 //----------------
 
 // Last Issues
